@@ -6,9 +6,9 @@ build_requires:
   English: 0
   ExtUtils::MakeMaker: 6.36
   File::Object: 0.05
+  IO::Scalar: 0
   Test::More: 0
   Test::NoWarnings: 0
-  Test::Output: 0
   Test::Pod: 0
   Test::Pod::Coverage: 0
 configure_requires:
