@@ -21,9 +21,9 @@ resources 'homepage' => 'https://github.com/tupinek/Error-Pure-NoDie';
 resources 'repository' => 'git://github.com/tupinek/Error-Pure-NoDie';
 test_requires 'English' => 0;
 test_requires 'File::Object' => 0.05;
+test_requires 'IO::Scalar' => 0;
 test_requires 'Test::More' => 0;
 test_requires 'Test::NoWarnings' => 0;
-test_requires 'Test::Output' => 0;
 test_requires 'Test::Pod' => 0;
 test_requires 'Test::Pod::Coverage' => 0;
 tests_recursive;
