@@ -6,8 +6,8 @@ use warnings;
 use English qw(-no_match_vars);
 use File::Object;
 use Error::Pure::NoDie qw(err);
+use IO::Scalar;
 use Test::More 'tests' => 6;
-use Test::Output;
 
 # Path to dir with T.pm. And load T.pm.
 BEGIN {
@@ -38,24 +38,18 @@ eval {
 is($EVAL_ERROR, "Error.\n", 'More evals.');
 
 # Test.
-stdout_is(
-	sub {
-		err 'Error';
-		return;
-	},
-	"Error\n",
-	'Print error instead die.',
-);
+my $out;
+tie *STDOUT, 'IO::Scalar', \$out;
+err 'Error';
+untie *STDOUT;
+is($out, "Error\n", 'Print error instead die.');
 
 # Test.
-stdout_is(
-	sub {
-		err 'Error', 1, 2;
-		return;
-	},
-	"Error12\n",
-	'Print error instead die. Version with more messages.',
-);
+$out = '';
+tie *STDOUT, 'IO::Scalar', \$out;
+err 'Error', 1, 2;
+untie *STDOUT;
+is($out, "Error12\n", 'Print error instead die. Version with more messages.');
 
 # Test.
 eval {
