@@ -1,4 +1,6 @@
 0.02
+- Fix test bug, when test use Test::Output::is_stdout (and Capture::Tiny) for
+  capture err via eval.
 
 0.01 (June 11, 2013)
 - First version.
